AI-JADEDEVS4/src/objects/Partner_Course_old__c.object
<CustomObject>
    <description>Partner Course</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Courses_old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Completed_By_Date__c</fullName>
        <description>Course Completed By Date</description>
        <label>Course Completed By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Completed_Date__c</fullName>
        <description>Course Completed Date</description>
        <label>Course Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Expire_Date__c</fullName>
        <description>Course Expire Date</description>
        <label>Course Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <formula>Course__r.Course_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Score__c</fullName>
        <description>Course Score</description>
        <label>Course Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <formula>IF(  Course_Expire_Date__c  &lt; TODAY() , &quot;Expired&quot;, 
IF( (Course_Expire_Date__c &gt;= TODAY() ) &amp;&amp;( NetExam_Course_Status__c == &quot;Completed&quot; ) ,&quot;Completed&quot;, 
IF(NetExam_Course_Status__c == &quot;Failed&quot;, &quot;Failed&quot;, 
IF(NetExam_Course_Status__c == &quot;In Progress&quot;, &quot;In Progress&quot;, 
IF(NetExam_Course_Status__c == &quot;Enrolled&quot;, &quot;Enrolled&quot;, 
BLANKVALUE( NetExam_Course_Status__c , &quot;Enrolled&quot;) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NE Course</description>
        <label>NE Course</label>
        <referenceTo>NE_Course_old__c</referenceTo>
        <relationshipName>Partner_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_To_Complete__c</fullName>
        <description>Days To Complete</description>
        <label>Days To Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Partner_Courses_old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetExam_Course_Status__c</fullName>
        <description>NetExam Course Status</description>
        <label>NetExam Course Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Completion__c</fullName>
        <label>Percentage Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Partner Course_old</label>
    <nameField>
        <displayFormat>NET-{0000000000}</displayFormat>
        <label>NE-Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Courses_old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>